--- a/index.html
+++ b/index.html
@@ -11,20 +11,25 @@
 
     <link rel="stylesheet" href="styles.css" />
 
-    <title>Matias Cusmai</title>
+    <title>CV - Matias Cusmai</title>
 </head>
 
 <body>
     <header class="header">
         <h1>matiCusmai > <span>CV</span></h1>
         <div class="redes">
-            <div class="icon__rrss"><img src="img/lilnkedin.png" alt=""></div>
-            <div class="icon__rrss"><img src="img/github.png" alt=""></div>
-            <div class="icon__rrss"><img src="img/behance.png" alt=""></div>
+            <div class="icon__rrss"><a href="https://www.linkedin.com/in/maticusmai/" target="_blank"><img
+                        src="img/lilnkedin.png" alt="linkedin"></a></div>
+            <div class="icon__rrss"><a href="https://github.com/matiCusmai" target="_blank"><img src="img/github.png"
+                        alt="github"></a></div>
+            <div class="icon__rrss"><a href="https://www.behance.net/maticusmai" target="_blank"><img
+                        src="img/behance.png" alt="behance"></a></div>
         </div>
     </header>
-    <section class="section">
-        <div>
+
+    <main class="section">
+        
+        <div class="columna">
             <div class="contenedor__col">
                 <img src="./img/fotomati.jpg" class="foto__circulo" alt="">
                 <div class="cont__nombre">
@@ -32,13 +37,19 @@
                     <p>DEV & DESIGN</p>
                 </div>
             </div>
-            <div class="contenedor__col2">
+
+            <div class="contenedor__col col2">
                 <div class="cont__nombre">
-                    <a class="link__col" href="#">maticusmai@gmail.com</a>
-                    <p>(+54) 11 3019 5479</p>
+                    <p><strong>EMAIL</strong></p>
+                    <a class="link__col" href="mailto:maticusmai@gmail.com" target="_blank">maticusmai@gmail.com</a>
+                    <br><br>
+                    <p><strong>WSP</strong></p>
+                    <a class="link__col" href="https://api.whatsapp.com/send?phone=541130195479" target="_blank">(+54)
+                        11 3019 5479</a>
                 </div>
             </div>
         </div>
+
         <div class="content__box">
             <div class="box">
                 <h3><span>Mi</span>OBJETIVO</h3>
@@ -122,9 +133,7 @@
                 <h4> <strong>2004/2009 </strong> FADU / UBA - Diseñador Gráfico</h4>
             </div>
         </div>
-    </section>
-
-
+    </main>
 </body>
 
 </html>
