--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </header>
 
     <main class="section">
-        
+
         <div class="columna">
             <div class="contenedor__col">
                 <img src="./img/fotomati.jpg" class="foto__circulo" alt="">
@@ -54,10 +54,11 @@
             <div class="box">
                 <h3><span>Mi</span>OBJETIVO</h3>
                 <hr>
-                <p>Formar parte de un equipo de desarrollo con el fin de mejorar la experiencia de usuarios y
-                    clientes. <br>
-                    Quiero trabajar como desarrollador Front-end, estoy capacitándome en bootcamps y tengo algo
-                    de experiencia previa en este campo.
+                <p>Mi objetivo es posicionarme en una empresa nacional / multinacional en el área de desarrollo,
+                    contribuyendo así a la satisfacción de usuarios y clientes.
+                    <br>
+                    Quiero formar parte de un equipo de Front-end, me interesa aportar ideas y adquirir conocimientos
+                    que contribuyan a una mejor experiencia tanto personal como de mis compañeros de trabajo.
                 </p>
             </div>
             <div class="box">
@@ -65,49 +66,69 @@
                 <hr>
                 <p>Diseñador gráfico de profesión, trabajé en distintas agencias de publicidad y estudios de
                     comunicación gráfica, realizando piezas de branding, packaging, publicidad, editorial...
-                    hasta que en 2013, una empresa para la que trabajaba en ese entonces, necesitaba resolver
-                    sitios web frente a una creciente demanda... ahí fue cuando comencé a diseñar sitios.
-                    Los diseñaba en photoshop e illustrator, luego maquetaba (HTML y CSS) y finalmente se lo
+                </p>
+                <p> En 2011 comencé a diseñar sitios, los diseñaba en photoshop e illustrator, luego maquetaba (HTML y
+                    CSS) y finalmente se lo
                     pasaba a un programador cuando se trataba de sitios dinámicos.
-                    <br>
-                    Más tarde, en otra empresa, realicé trabajos de landing pages, mailing, presentaciones
+                </p>
+                <p>
+                    Más tarde, realicé landing pages, mailing, presentaciones
                     multimedia, sitios web, banners y anuncios para redes sociales.
-                    <br>
+                </p>
+                <p>
                     Fue recién a partir del 2020 que decidí capacitarme en programación y tecnologías tales como
-                    HTML5, CSS3, SASS, BOOTSTRAP, JAVASCRIPT, REACT, GIT y GITHUB… al ver todo lo que se podía
+                    HTML, CSS, JavaScript, consumo de APIs, base de datos, etc… <br>y al ver todo lo que se podía
                     hacer con ello se despertó mi pasión por el desarrollo de Apps y Web.
-                    <br>
-                    Ahora sigo expandiendo
-                    mis conocimientos y buscando nuevas experiencias de trabajo que contribuyan a mi formación.
+                </p>
+                <p>
+                    Ahora sigo expandiendo mis conocimientos y buscando nuevas experiencias de trabajo que contribuyan a
+                    mi formación.
                 </p>
             </div>
             <div class="box">
-                <h3><span>Aptitudes </span>y
-                    habilidades</h3>
+                <h3><span>Aptitudes</span>Y HABILIDADES</h3>
                 <hr>
                 <ul>
-                    <li>Inglés (intermedio) – español (nativo).</li>
-                    <li>Autodidacta, actualizo mis conocimientos en el área de Desarrollo.</li>
-                    <li>Utilizo plataformas Mac y Pc.</li>
-                    <li>Programas: Diseño: Photoshop, Illustrator, Figma</li>
-                    <li>Lenguajes y Frameworks: HTML5, CSS3, SASS, JavaScript, React, Bootstrap, Git y GitHub</li>
-                    <li>Organizo mis tareas y me gusta trabajar en equipo.</li>
+                    <li><strong>Inglés</strong> (intermedio)</li>
+                    <li><strong>Español</strong> (nativo)</li>
+                    <li><strong>Autodidacta</strong></li>
+                    <li><strong>Plataformas Mac y Pc</strong></li>
+                    <li><strong>Programas:</strong>
+                        <br>Adobe Creative Suite
+                        <br>Figma (Prototipado)
+                        <br>Visual Studio Code
+                    </li>
+                    <li><strong>Lenguajes y Frameworks:</strong>
+                        <br> HTML5
+                        <br> CSS3
+                        <br> SASS
+                        <br> JavaScript
+                        <br> Package.json
+                        <br> React
+                        <br> Bootstrap
+                        <br> Git - GitHub
+                    </li>
+                    <li><strong>Organizado</strong></li>
+                    <li><strong>Trabajo en equipo</strong></li>
                     <br>
                 </ul>
             </div>
             <div class="box bg">
-                <h3><span>Mi</span>experiencia</h3>
+                <h3><span>Mi</span>EXPERIENCIA</h3>
                 <hr>
                 <div>
-                    <h4> <strong>2017/actual – Freelancer </strong>(Clientes propios y agencias)</h4>
+                    <h4> <strong>2017/actual – Freelancer </strong>
+                       <br> (Clientes propios y agencias)</h4>
                     <ul>
                         <li>Desarrollo de sitios web y app (responsive y mobile first)</li>
                         <li>Diseño gráfico - Branding - Pop – Packaging - Otros</li>
-                    </ul> <br>
+                    </ul> 
+                    <br>
                     <hr>
                 </div>
                 <div>
-                    <h4> <strong>2013/2017 - Digital Dots </strong> Estudio de diseño y desarrollo multimedia</h4>
+                    <h4> <strong>2013/2017 - Digital Dots </strong> 
+                       <br>Estudio de diseño y desarrollo multimedia</h4>
                     <ul>
                         <li>Responsable del área de diseño (Branding, Editorial, y piezas en gral.)</li>
                         <li>Desarrollo de sitios web - diseño y maquetación</li>
@@ -116,7 +137,8 @@
                     <hr>
                 </div>
                 <div>
-                    <h4> <strong>2009/2013 – Ibris</strong> Agencia de Comunicaciòn y Creatividad Publicitaria</h4>
+                    <h4> <strong>2009/2013 – Ibris</strong> 
+                       <br>Agencia de Comunicaciòn y Creatividad Publicitaria</h4>
                     <ul>
                         <li>Diseño de productos digitales (Web, Landing pages, Newsletter, etc)</li>
                         <li>Maquetación (Diseño, Html, Css) trabajé en equipo con programadores</li>
@@ -128,9 +150,12 @@
             <div class="box">
                 <h3><span>Mi</span>FORMACION</h3>
                 <hr>
-                <h4> <strong>2022 CODERHOUSE </strong> Carrera de Desarrollo Front-end – React</h4>
-                <h4> <strong>2021 UDEMY </strong> Desarrollo web completo: Html5, Css3, Js, Ajax, Php y Mysql</h4>
-                <h4> <strong>2004/2009 </strong> FADU / UBA - Diseñador Gráfico</h4>
+                <h4> <strong>Desarrollador FrontEnd – React</strong>
+                    <br>2022 - CODERHOUSE</h4>
+                <h4><strong>Desarrollador FullStack</strong>
+                    <br>2021 - UDEMY</h4>
+                <h4> <strong>Diseñador Gráfico</strong>
+                   <br> 2004/2009 - FADU / UBA</h4>
             </div>
         </div>
     </main>
