--- a/index.html
+++ b/index.html
@@ -11,18 +11,18 @@
 
     <link rel="stylesheet" href="styles.css" />
 
-    <title>CV - Matias Cusmai</title>
+    <title>CV - Matias Cusmai - 2023</title>
 </head>
 
 <body>
     <header class="header">
         <h1>matiCusmai > <span>CV</span></h1>
         <div class="redes">
-            <div class="icon__rrss"><a href="https://www.linkedin.com/in/maticusmai/" target="_blank"><img
+            <div title="Linkedin" class="icon__rrss"><a href="https://www.linkedin.com/in/maticusmai/" target="_blank"><img
                         src="img/lilnkedin.png" alt="linkedin"></a></div>
-            <div class="icon__rrss"><a href="https://github.com/matiCusmai" target="_blank"><img src="img/github.png"
+            <div title="Github" class="icon__rrss"><a href="https://github.com/matiCusmai" target="_blank"><img src="img/github.png"
                         alt="github"></a></div>
-            <div class="icon__rrss"><a href="https://www.behance.net/maticusmai" target="_blank"><img
+            <div title="Portfolio - Behance" class="icon__rrss"><a href="https://www.behance.net/maticusmai" target="_blank"><img
                         src="img/behance.png" alt="behance"></a></div>
         </div>
     </header>
@@ -54,10 +54,10 @@
             <div class="box">
                 <h3><span>Mi</span>OBJETIVO</h3>
                 <hr>
-                <p>Mi objetivo es posicionarme en una empresa nacional / multinacional en el área de desarrollo,
+                <p>Mi objetivo es posicionarme en una empresa (nacional - multinacional) en el área de Diseño / Comunicación / Desarrollo,
                     contribuyendo así a la satisfacción de usuarios y clientes.
                     <br>
-                    Quiero formar parte de un equipo de Front-end, me interesa aportar ideas y adquirir conocimientos
+                    Quiero formar parte de un equipo, me interesa aportar ideas y conocimientos
                     que contribuyan a una mejor experiencia tanto personal como de mis compañeros de trabajo.
                 </p>
             </div>
@@ -67,18 +67,17 @@
                 <p>Diseñador gráfico de profesión, trabajé en distintas agencias de publicidad y estudios de
                     comunicación gráfica, realizando piezas de branding, packaging, publicidad, editorial...
                 </p>
-                <p> En 2011 comencé a diseñar sitios, los diseñaba en photoshop e illustrator, luego maquetaba (HTML y
-                    CSS) y finalmente se lo
-                    pasaba a un programador cuando se trataba de sitios dinámicos.
+                <p> En 2011 comencé a diseñar sitios web, utilizando herramientas como photoshop e illustrator, luego los maquetaba (HTML y
+                    CSS) y finalmente se lo pasaba a un programador cuando se trataba de sitios dinámicos.
                 </p>
                 <p>
                     Más tarde, realicé landing pages, mailing, presentaciones
-                    multimedia, sitios web, banners y anuncios para redes sociales.
+                    multimedia, banners y anuncios para redes sociales.
                 </p>
                 <p>
                     Fue recién a partir del 2020 que decidí capacitarme en programación y tecnologías tales como
-                    HTML, CSS, JavaScript, consumo de APIs, base de datos, etc… <br>y al ver todo lo que se podía
-                    hacer con ello se despertó mi pasión por el desarrollo de Apps y Web.
+                    HTML, CSS, JavaScript y React, consumo de APIs, base de datos (Firebase), etc… <br>y al ver todo lo que se podía
+                    hacer con ello aprobeché mi entusiasmo para continuar en el desarrollo de Apps y Web, aunque no tengo tanta experiencia laboral como programador.
                 </p>
                 <p>
                     Ahora sigo expandiendo mis conocimientos y buscando nuevas experiencias de trabajo que contribuyan a
