--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
     <header class="header">
         <h1>matiCusmai > <span>CV</span></h1>
         <div class="redes">
-            <div title="Linkedin" class="icon__rrss"><a href="https://www.linkedin.com/in/maticusmai/" target="_blank"><img
-                        src="img/lilnkedin.png" alt="linkedin"></a></div>
-            <div title="Github" class="icon__rrss"><a href="https://github.com/matiCusmai" target="_blank"><img src="img/github.png"
-                        alt="github"></a></div>
-            <div title="Portfolio - Behance" class="icon__rrss"><a href="https://www.behance.net/maticusmai" target="_blank"><img
-                        src="img/behance.png" alt="behance"></a></div>
+            <div title="Linkedin" class="icon__rrss"><a href="https://www.linkedin.com/in/maticusmai/"
+                    target="_blank"><img src="img/lilnkedin.png" alt="linkedin"></a></div>
+            <div title="Github" class="icon__rrss"><a href="https://github.com/matiCusmai" target="_blank"><img
+                        src="img/github.png" alt="github"></a></div>
+            <div title="Portfolio - Behance" class="icon__rrss"><a href="https://www.behance.net/maticusmai"
+                    target="_blank"><img src="img/behance.png" alt="behance"></a></div>
         </div>
     </header>
 
@@ -54,7 +54,8 @@
             <div class="box">
                 <h3><span>Mi</span>OBJETIVO</h3>
                 <hr>
-                <p>Mi objetivo es posicionarme en una empresa (nacional - multinacional) en el área de Diseño / Comunicación / Desarrollo,
+                <p>Mi objetivo es posicionarme en una empresa (nacional - multinacional) en el área de Diseño /
+                    Comunicación / Desarrollo,
                     contribuyendo así a la satisfacción de usuarios y clientes.
                     <br>
                     Quiero formar parte de un equipo, me interesa aportar ideas y conocimientos
@@ -67,7 +68,8 @@
                 <p>Diseñador gráfico de profesión, trabajé en distintas agencias de publicidad y estudios de
                     comunicación gráfica, realizando piezas de branding, packaging, publicidad, editorial...
                 </p>
-                <p> En 2011 comencé a diseñar sitios web, utilizando herramientas como photoshop e illustrator, luego los maquetaba (HTML y
+                <p> En 2011 comencé a diseñar sitios web, utilizando herramientas como photoshop e illustrator, luego
+                    los maquetaba (HTML y
                     CSS) y finalmente se lo pasaba a un programador cuando se trataba de sitios dinámicos.
                 </p>
                 <p>
@@ -76,8 +78,10 @@
                 </p>
                 <p>
                     Fue recién a partir del 2020 que decidí capacitarme en programación y tecnologías tales como
-                    HTML, CSS, JavaScript y React, consumo de APIs, base de datos (Firebase), etc… <br>y al ver todo lo que se podía
-                    hacer con ello aprobeché mi entusiasmo para continuar en el desarrollo de Apps y Web, aunque no tengo tanta experiencia laboral como programador.
+                    HTML, CSS, JavaScript y React, consumo de APIs, base de datos (Firebase), etc… <br>y al ver todo lo
+                    que se podía
+                    hacer con ello aprobeché mi entusiasmo para continuar en el desarrollo de Apps y Web, aunque no
+                    tengo tanta experiencia laboral como programador.
                 </p>
                 <p>
                     Ahora sigo expandiendo mis conocimientos y buscando nuevas experiencias de trabajo que contribuyan a
@@ -117,17 +121,19 @@
                 <hr>
                 <div>
                     <h4> <strong>2017/actual – Freelancer </strong>
-                       <br> (Clientes propios y agencias)</h4>
+                        <br> (Clientes propios y agencias)
+                    </h4>
                     <ul>
                         <li>Desarrollo de sitios web y app (responsive y mobile first)</li>
                         <li>Diseño gráfico - Branding - Pop – Packaging - Otros</li>
-                    </ul> 
+                    </ul>
                     <br>
                     <hr>
                 </div>
                 <div>
-                    <h4> <strong>2013/2017 - Digital Dots </strong> 
-                       <br>Estudio de diseño y desarrollo multimedia</h4>
+                    <h4> <strong>2013/2017 - Digital Dots </strong>
+                        <br>Estudio de diseño y desarrollo multimedia
+                    </h4>
                     <ul>
                         <li>Responsable del área de diseño (Branding, Editorial, y piezas en gral.)</li>
                         <li>Desarrollo de sitios web - diseño y maquetación</li>
@@ -136,8 +142,9 @@
                     <hr>
                 </div>
                 <div>
-                    <h4> <strong>2009/2013 – Ibris</strong> 
-                       <br>Agencia de Comunicaciòn y Creatividad Publicitaria</h4>
+                    <h4> <strong>2009/2013 – Ibris</strong>
+                        <br>Agencia de Comunicaciòn y Creatividad Publicitaria
+                    </h4>
                     <ul>
                         <li>Diseño de productos digitales (Web, Landing pages, Newsletter, etc)</li>
                         <li>Maquetación (Diseño, Html, Css) trabajé en equipo con programadores</li>
@@ -150,11 +157,25 @@
                 <h3><span>Mi</span>FORMACION</h3>
                 <hr>
                 <h4> <strong>Desarrollador FrontEnd – React</strong>
-                    <br>2022 - CODERHOUSE</h4>
+                    <br>2022 - CODERHOUSE
+                </h4>
                 <h4><strong>Desarrollador FullStack</strong>
-                    <br>2021 - UDEMY</h4>
+                    <br>2021 - UDEMY
+                </h4>
                 <h4> <strong>Diseñador Gráfico</strong>
-                   <br> 2004/2009 - FADU / UBA</h4>
+                    <br> 2004/2009 - FADU / UBA
+                </h4>
+            </div>
+            <div class="box bg-black">
+                <h3><span>Mi</span>PORTFOLIO</h3>
+                <hr>
+                <p><strong>Behance</strong></p>
+                <a class="link__col-w" href="https://www.behance.net/maticusmai" target="_blank">Portfolio / Diseñador</a>
+                <p><strong>GitHub</strong></p>
+                <a class="link__col-w" href="https://github.com/matiCusmai" target="_blank">Portfolio / Código</a>
+                <br>
+                <p><strong>Linkedin</strong></p>
+                <a class="link__col-w" href="https://github.com/matiCusmai" target="_blank">Referencias / Linkedin</a>
             </div>
         </div>
     </main>
