--- a/index.html
+++ b/index.html
@@ -48,6 +48,11 @@
                         11 3019 5479</a>
                 </div>
             </div>
+            <div class="contenedor__col col2" style="background-color: black;">
+                <div class="cont__nombre">
+                    <a class="link__col" style="color: white;" href="https://portfolio-mati-cusmai.netlify.app/" target="_blank">Ver Portfolio</a>
+                </div>
+            </div>
         </div>
 
         <div class="content__box">
@@ -80,8 +85,7 @@
                     Fue recién a partir del 2020 que decidí capacitarme en programación y tecnologías tales como
                     HTML, CSS, JavaScript y React, consumo de APIs, base de datos (Firebase), etc… <br>y al ver todo lo
                     que se podía
-                    hacer con ello aprobeché mi entusiasmo para continuar en el desarrollo de Apps y Web, aunque no
-                    tengo tanta experiencia laboral como programador.
+                    hacer con ello aprobeché mi entusiasmo para continuar en el desarrollo de Apps y Web.
                 </p>
                 <p>
                     Ahora sigo expandiendo mis conocimientos y buscando nuevas experiencias de trabajo que contribuyan a
