boton de portfolio

--- a/index.html
+++ b/index.html
@@ -37,22 +37,23 @@
                     <p>DEV & DESIGN</p>
                 </div>
             </div>
-
-            <div class="contenedor__col col2">
-                <div class="cont__nombre">
-                    <p><strong>EMAIL</strong></p>
-                    <a class="link__col" href="mailto:maticusmai@gmail.com" target="_blank">maticusmai@gmail.com</a>
-                    <br><br>
-                    <p><strong>WSP</strong></p>
-                    <a class="link__col" href="https://api.whatsapp.com/send?phone=541130195479" target="_blank">(+54)
-                        11 3019 5479</a>
-                </div>
-            </div>
             <div class="contenedor__col col2" style="background-color: black;">
                 <div class="cont__nombre">
                     <a class="link__col" style="color: white;" href="https://portfolio-mati-cusmai.netlify.app/" target="_blank">Ver Portfolio</a>
                 </div>
             </div>
+            <div class="contenedor__col col2">
+                <div class="cont__nombre">
+                    <p><strong>EMAIL</strong></p>
+                    <a class="link__col" href="mailto:maticusmai@gmail.com" target="_blank">maticusmai@gmail.com</a>
+                    <br>
+                    <br>
+                    <p><strong>WSP</strong></p>
+                    <a class="link__col" href="https://api.whatsapp.com/send?phone=541130195479" target="_blank">(+54)
+                        11 3019 5479</a>
+                </div>
+            </div>
+            
         </div>
 
         <div class="content__box">
@@ -173,6 +174,8 @@
             <div class="box bg-black">
                 <h3><span>Mi</span>PORTFOLIO</h3>
                 <hr>
+                <p><strong>Portfolio Resumen</strong></p>
+                <a class="link__col-w" href="https://portfolio-mati-cusmai.netlify.app/" target="_blank">Diseño y Desarrollo</a>
                 <p><strong>Behance</strong></p>
                 <a class="link__col-w" href="https://www.behance.net/maticusmai" target="_blank">Portfolio / Diseñador</a>
                 <p><strong>GitHub</strong></p>
