mejara de texto inicial

--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
             </div>
             <div class="contenedor__col col2" style="background-color: black;">
                 <div class="cont__nombre">
-                    <a class="link__col" style="color: white;" href="https://portfolio-mati-cusmai.netlify.app/" target="_blank">Ver Portfolio</a>
+                    <a class="link__col" style="color: white;" href="https://portfolio-mati-cusmai.netlify.app/"
+                        target="_blank">Ver Portfolio</a>
                 </div>
             </div>
             <div class="contenedor__col col2">
@@ -53,19 +54,21 @@
                         11 3019 5479</a>
                 </div>
             </div>
-            
+
         </div>
 
         <div class="content__box">
             <div class="box">
                 <h3><span>Mi</span>OBJETIVO</h3>
                 <hr>
-                <p>Mi objetivo es posicionarme en una empresa (nacional - multinacional) en el área de Diseño /
-                    Comunicación / Desarrollo,
-                    contribuyendo así a la satisfacción de usuarios y clientes.
+                <p>Mi objetivo es destacarme en una empresa líder, ya sea a nivel nacional o multinacional, en el ámbito
+                    del Diseño Gráfico y Desarrollo Web. Estoy comprometido a contribuir a la satisfacción de los
+                    usuarios y clientes a través de la creación de experiencias visuales y digitales excepcionales.
                     <br>
-                    Quiero formar parte de un equipo, me interesa aportar ideas y conocimientos
-                    que contribuyan a una mejor experiencia tanto personal como de mis compañeros de trabajo.
+                    Busco integrarme a un equipo dinámico donde pueda aportar ideas innovadoras y conocimientos
+                    especializados para mejorar la experiencia tanto de los usuarios como de mis colegas de trabajo. Mi
+                    pasión por el diseño y el desarrollo web me impulsa a buscar desafíos que me permitan seguir
+                    creciendo profesionalmente y aportar valor a la empresa.
                 </p>
             </div>
             <div class="box">
@@ -175,9 +178,11 @@
                 <h3><span>Mi</span>PORTFOLIO</h3>
                 <hr>
                 <p><strong>Portfolio Resumen</strong></p>
-                <a class="link__col-w" href="https://portfolio-mati-cusmai.netlify.app/" target="_blank">Diseño y Desarrollo</a>
+                <a class="link__col-w" href="https://portfolio-mati-cusmai.netlify.app/" target="_blank">Diseño y
+                    Desarrollo</a>
                 <p><strong>Behance</strong></p>
-                <a class="link__col-w" href="https://www.behance.net/maticusmai" target="_blank">Portfolio / Diseñador</a>
+                <a class="link__col-w" href="https://www.behance.net/maticusmai" target="_blank">Portfolio /
+                    Diseñador</a>
                 <p><strong>GitHub</strong></p>
                 <a class="link__col-w" href="https://github.com/matiCusmai" target="_blank">Portfolio / Código</a>
                 <br>
