--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                         <br> CSS3
                         <br> SASS
                         <br> JavaScript
-                        <br> Package.json
+                        <br> npm
                         <br> React
                         <br> Bootstrap
                         <br> Git - GitHub
@@ -128,7 +128,7 @@
                 <h3><span>Mi</span>EXPERIENCIA</h3>
                 <hr>
                 <div>
-                    <h4> <strong>2017/actual – Freelancer </strong>
+                    <h4> <strong>2018/actual – Freelancer </strong>
                         <br> (Clientes propios y agencias)
                     </h4>
                     <ul>
