--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
     <header class="header">
         <h1>matiCusmai > <span>CV</span></h1>
         <div class="redes">
+            <div title="English" class="eng"><a href="/eng.html"
+                target="_parent">EN</a></div>
             <div title="Linkedin" class="icon__rrss"><a href="https://www.linkedin.com/in/maticusmai/"
                     target="_blank"><img src="img/lilnkedin.png" alt="linkedin"></a></div>
             <div title="Github" class="icon__rrss"><a href="https://github.com/matiCusmai" target="_blank"><img
@@ -61,35 +63,22 @@
             <div class="box">
                 <h3><span>Mi</span>OBJETIVO</h3>
                 <hr>
-                <p>Mi objetivo es destacarme en una empresa líder, ya sea a nivel nacional o multinacional, en el ámbito
-                    del Diseño Gráfico y Desarrollo Web. Estoy comprometido a contribuir a la satisfacción de los
-                    usuarios y clientes a través de la creación de experiencias visuales y digitales excepcionales.
-                    <br>
-                    Busco integrarme a un equipo dinámico donde pueda aportar ideas innovadoras y conocimientos
-                    especializados para mejorar la experiencia tanto de los usuarios como de mis colegas de trabajo. Mi
-                    pasión por el diseño y el desarrollo web me impulsa a buscar desafíos que me permitan seguir
-                    creciendo profesionalmente y aportar valor a la empresa.
+                <p>Estoy buscando oportunidades para trabajar en una empresa, ya sea nacional o multinacional, en el
+                    área de diseño gráfico y/o desarrollo web donde pueda utilizar mis habilidades y experiencia para contribuir al éxito de la empresa mientras sigo creciendo profesionalmente.
                 </p>
             </div>
             <div class="box">
                 <h3><span>Acerca</span>DE MI</h3>
                 <hr>
-                <p>Diseñador gráfico de profesión, trabajé en distintas agencias de publicidad y estudios de
-                    comunicación gráfica, realizando piezas de branding, packaging, publicidad, editorial...
+                <p>Con mas de 10 años de experiencia en el campo del diseño gráfico y la comunicación visual, he trabajado con diversas agencias de publicidad y estudios de comunicación, desarrollando piezas de
+                    branding, packaging, publicidad y editorial para marcas reconocidas internacionalmente como
+                    Unilever, Knorr, Dannone, La serenísima, AdeS, Mistral, Natura, entre otros...
                 </p>
-                <p> En 2011 comencé a diseñar sitios web, utilizando herramientas como photoshop e illustrator, luego
-                    los maquetaba (HTML y
-                    CSS) y finalmente se lo pasaba a un programador cuando se trataba de sitios dinámicos.
+                <p> Además, he adquirido conocimientos en desarrollo web, especializándome en la creación de mailing, landing pages y sitios web.
                 </p>
                 <p>
-                    Más tarde, realicé landing pages, mailing, presentaciones
+                    También presentaciones
                     multimedia, banners y anuncios para redes sociales.
-                </p>
-                <p>
-                    Fue recién a partir del 2020 que decidí capacitarme en programación y tecnologías tales como
-                    HTML, CSS, JavaScript y React, consumo de APIs, base de datos (Firebase), etc… <br>y al ver todo lo
-                    que se podía
-                    hacer con ello aprobeché mi entusiasmo para continuar en el desarrollo de Apps y Web.
                 </p>
                 <p>
                     Ahora sigo expandiendo mis conocimientos y buscando nuevas experiencias de trabajo que contribuyan a
@@ -105,7 +94,7 @@
                     <li><strong>Autodidacta</strong></li>
                     <li><strong>Plataformas Mac y Pc</strong></li>
                     <li><strong>Programas:</strong>
-                        <br>Adobe Creative Suite
+                        <br>Adobe Creative Suite (Illustrator, Photoshop, Indesign)
                         <br>Figma (Prototipado)
                         <br>Visual Studio Code
                     </li>
@@ -114,7 +103,7 @@
                         <br> CSS3
                         <br> SASS
                         <br> JavaScript
-                        <br> npm
+                        <br> Npm
                         <br> React
                         <br> Bootstrap
                         <br> Git - GitHub
@@ -133,31 +122,44 @@
                     </h4>
                     <ul>
                         <li>Desarrollo de sitios web y app (responsive y mobile first)</li>
-                        <li>Diseño gráfico - Branding - Pop – Packaging - Otros</li>
+                        <li>Diseño gráfico - Editorial - Branding - Pop – Packaging - Otros</li>
                     </ul>
                     <br>
                     <hr>
                 </div>
                 <div>
-                    <h4> <strong>2013/2017 - Digital Dots </strong>
-                        <br>Estudio de diseño y desarrollo multimedia
+                    <h4> <strong>2015/2018 - Digital Dots </strong>
+                        <br>Estudio de diseño gráfico y desarrollo multimedia
                     </h4>
                     <ul>
-                        <li>Responsable del área de diseño (Branding, Editorial, y piezas en gral.)</li>
+                        <li>Responsable del área de diseño (Branding, Editorial, y piezas en general)</li>
+                        <li>Armado de originales para impresión offset, laca sectorizada, cortes y troquelado.</li>
                         <li>Desarrollo de sitios web - diseño y maquetación</li>
                     </ul>
                     <h5>Contacto Ref.: Federico Meliz (Director), Matias Alonso (Dev)</h5>
                     <hr>
                 </div>
                 <div>
-                    <h4> <strong>2009/2013 – Ibris</strong>
+                    <h4> <strong>2012/2015 - Promoption</strong>
+                        <br>Agencia de Marketing Promocional
+                    </h4>
+                    <ul>
+                        <li>Diseño de Packaging</li>
+                        <li>Piezas Promocionales BTL/POP</li>
+                    </ul>
+                    <h5>Contacto Ref.: Gabriel Lendner (Director de Arte)</h5>
+                    <hr>
+                </div>
+                <div>
+                    <h4> <strong>2009/2012 – Ibris</strong>
                         <br>Agencia de Comunicaciòn y Creatividad Publicitaria
                     </h4>
                     <ul>
                         <li>Diseño de productos digitales (Web, Landing pages, Newsletter, etc)</li>
                         <li>Maquetación (Diseño, Html, Css) trabajé en equipo con programadores</li>
                     </ul>
-                    <h5>Contacto Ref.: Nicolás Costela (Director), Alexander Gonzalez (Socio), Maru Ballesteros (Dra. de
+                    <h5>Contacto Ref.: Nicolás Costela (Director), Alexander Gonzalez (Socio), Maru Ballesteros
+                        (Directora de
                         Arte)</h5>
                 </div>
             </div>
@@ -172,6 +174,9 @@
                 </h4>
                 <h4> <strong>Diseñador Gráfico</strong>
                     <br> 2004/2009 - FADU / UBA
+                </h4>
+                <h4> <strong>Publicidad</strong>
+                    <br> 2001/2003 - UCES (incompleto)
                 </h4>
             </div>
             <div class="box bg-black">
